ffixed problem with db

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_NAME='postgres'
 DATABASE_LOGIN='root'
 DATABASE_PASSWORD='991155'
-DATABASE_HOST='localhost'
+DATABASE_HOST='90.156.225.86'
 DATABASE_PORT=5432
